[package]
name = "candle_demo_openchat_35"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
candle-core = { version = "0.3.1" }
candle-transformers = "0.3.1"
clap = "4.4.10"
hf-hub = "0.3.2"
tokenizers = "0.15.0"

[[bin]]
name = "simple"
path = "src/simple.rs"


[[bin]]
name = "cli"
path = "src/cli.rs"

