[package]
name = "candle_demo_yolov8"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
candle-core = "0.3.1"
candle-nn = "0.3.1"
candle-transformers = "0.3.1"
clap = "4.4.10"
hf-hub = "0.3.2"
image = "0.24.7"
imageproc = "0.23.0"
rusttype = "0.9.3"
tokenizers = "0.15.0"
tracing = "0.1.40"
tracing-chrome = "0.7.1"
tracing-subscriber = "0.3.18"

