[package]
name = "slint-chatbot-demo"
version = "0.1.0"
authors = ["daoga"]
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = "1.3"
anyhow = "1.0.75"
candle-core = { version = "0.3.1" }
candle-transformers = { version = "0.3.1" }
clap = "4.4.10"
hf-hub = "0.3.2"
tokenizers = "0.15.0"

[build-dependencies]
slint-build = "1.3"
