[package]
name = "axumapp10"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
axum = "0.6.12"
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.4.0", features = ["fs", "trace"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.95"
bb8 = "0.7.1"
bb8-postgres = "0.7.0"
tokio-postgres = "0.7.2"
